# asl-project-23S

./: .gitignore  basefunctions.c  commands.txt  pyproject.toml  sanitizer-ignorelist.txt
asl_project/: __init__.py  algorithms.py  flops.py  mult2_optimization_plots.py  plot.py
profiling/: profiling_addition  profiling_multiplication  profiling_multiplication2
results/: benchmark.csv  benchmark_tom.csv
results Intel g++/: benchmark.csv
src/: Makefile  a  addition_optimizations.c  basefunctions.c  basefunctions.cpp  basefunctions.h  basefunctionsoptimized.c  basefunctionssimd  basefunctionssimd.c  benchmark  benchmark.cpp  comp.cpp  evaluate.cpp  fourmult.c  main.cpp  main.h  measure.cpp  mult2.c  mult2.cpp  mult2_optimizations.c  mult2_optimizations.cpp  mult_testing.c  multiplication_optimizations.c  playground  playground.cpp  reference.h  reference_cpp.h  reference_solution.c  renormalization_optimizations.c  testAlgo8.c  testAlgos7and8.c  testAlgos7and8.cpp  testMult2.c  testalgo5and6.cpp  tests  tests.cpp  timing.cpp  unit_tests.cpp  valgrind.rpt  vec_sum_err_branch_optimizations.c  (+2 more)
stream/: stream_win.c
