[tool.poetry]
name = "asl-team13"
version = "0.1.0"
description = "Team 13's Project for the Advanced Systems Lab course"
authors = [
  "Alec Pauli <paulia@student.ethz.ch>",
  "Andras Geiszl <ageiszl@student.ethz.ch>",
  "Tom Wartmann <tomw@ethz.ch>",
  "Luca Pinter <pinterl@student.ethz.ch>",
]
license = "UNLICENSED"
readme = "README.md"
repository = "https://gitlab.inf.ethz.ch/COURSE-ASL/asl23/team13"
packages = [{ include = "asl_project" }]

[tool.poetry.scripts]
plot = "asl_project.plot:main"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
